--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Happy Birthday Website 2.0 | Aoudumber Bade">
-    <meta name="github" content="https://github.com/Aoudumber-Bade">
-    <title>HBD 2.0 | Aoudumber Bade</title>
+    <meta name="title" content="Happy Birthday Website 3.1 |abhayrajpatel420">
+    <meta name="github" content="https://github.com/abhayrajpatel420">
+    <title>abhayrajpatel420|BirthdayWish</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
@@ -48,7 +48,7 @@
                 </div>
                 <div class="btn">
                     <button id="btn__letter">
-                        Click here Rashmii
+                        Click here Ranjana ji
                         <i class="fa-regular fa-envelope"></i>
                     </button>
                 </div>
@@ -147,12 +147,12 @@
     </div>
 
     <div id="copy">
-        <p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/aoudumber.dev/reels/#">@aoudumber.dev</a></p>
+        <p class="text-center text-white text-sm">OG Creator <a href="https://www.instagram.com/abhayraj_patel_06/reels/#">GitHub||@abhayrtajpatel420</a></p>
     </div>
 </body>
 <script>
-    let datetxt = "5 April 1996";
-    let datatxtletter = "My love. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
+    let datetxt = "16 july 2005";
+    let datatxtletter = "Dear. You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
