--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Rashmiiii</span>
+                        <span>Ranjana Patel Ji</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
