--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="btn">
                     <button id="btn__letter">
-                        Click here Ranjana ji
+                        Click here "Name"
                         <i class="fa-regular fa-envelope"></i>
                     </button>
                 </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="name">
                         <i class="fa-solid fa-heart"></i>
-                        <span>Ranjana</span>
+                        <span>Name</span>
                         <i class="fa-solid fa-heart"></i>
                     </div>
                     <div class="balloon_one">
@@ -151,8 +151,8 @@
     </div>
 </body>
 <script>
-    let datetxt = "16 july 2005";
-    let datatxtletter = "Dear You are a very special girl. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
+    let datetxt = "06/09/2005";
+    let datatxtletter = "Dear You are a very special. I always silently thank you for coming into my life. Today, I wish you all the best, lots of health, and lots of joy. I always hope we will celebrate many more birthdays like this together. Happy birthday to you.💕";
     let titleLetter = "To you";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
